-Fixed dropdown and admin label not showing on admins for every user

--- a/ForumSystem/ForumSystem/wwwroot/css/StyleSheet.css
+++ b/ForumSystem/ForumSystem/wwwroot/css/StyleSheet.css
@@ -741,7 +741,6 @@ h2.table-label {
 .dropdown-selectopt {
     opacity: 0;
     position: absolute;
-    left: -99999px;
 }
 
     .dropdown-selectopt:checked + .dropdown-opt-label {
